syntax = "proto3";

package pbfoo;

option go_package = "github.com/hafizarrDev/go-opentelemetry-dev/v2/example/pbfoo";

service Example {
    rpc Foo(ReqFoo) returns (ResFoo) {}
}

message ReqFoo {
}

message ResFoo {
    string trace_id = 1;
}
